[package]
edition = "2021"
name = "hanlon"
version = "0.1.0"

[dependencies]
az = "1"
eframe = { version = "0.19", features = ["dark-light"] }
egui = "0.19"
egui_file = "0.2"
enumset = "1"
epaint = "0.19"
once_cell = "1"
rodio = { version = "0.16", features = ["vorbis"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "2"
